--- a/css/200k.css
+++ b/css/200k.css
@@ -1,10 +1,10 @@
-.columnLeft {
-    padding-top: 50px;
-    padding-left: 50px;
-}
+/*.columnLeft {*/
+    /*padding-top: 50px;*/
+    /*padding-left: 50px;*/
+/*}*/
 
-.columnRight {
-    padding-top: 50px;
-    padding-right: 50px;
-    background-color: lightgray;
-}
+/*.columnRight {*/
+    /*padding-top: 50px;*/
+    /*padding-right: 50px;*/
+    /*background-color: lightgray;*/
+/*}*/
